# track160_exercise

./: CMakeLists.txt  MainClass.cpp  MainClass.h  README.md  client_example.cpp  flipRGB.cpp  flipRGB.h  grayMir.cpp  grayMir.h  task_queue.h  videoDecoder.cpp  videoDecoder.h
